--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <script src="index.js"></script>
   </body>
 
-  <!-- <footer>
-    www 🎲 App Brewery 🎲 com
-  </footer> -->
+  <footer>
+    Refresh page for next game
+
+  </footer>
 </html>
